# ai-test-design-support

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/ai_test_design_support_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: main.py
backend/app/api/: health.py  test_designs.py
backend/app/core/: __init__.py  config.py
backend/app/db/: database.py  models.py
backend/app/models/: test_design.py
backend/app/services/: history_service.py  llm_errors.py  llm_mock.py  llm_openai.py  llm_provider.py  prompt_builder.py
backend/tests/: conftest.py  test_health.py  test_histories.py  test_llm_provider.py  test_test_designs.py
docs/: api-design.md  aws-architecture.md  aws-budget.md  aws-cost-estimate.md  aws-deploy.md  aws-destroy.md  aws-version-differences.md  db-design.md  development-policy.md  docslocal-mvp-verification.md  llm-mock-design.md  local-mvp-verification.md  markdown-output.md  mvp-requirements.md  phase1-implementation-checklist.md  sample-specs.md  screen-design.md  security-policy.md  setup-local.md
frontend/: README.md  next.config.ts  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: HistoryDetail.tsx  HistoryList.tsx  HistorySection.tsx  TestDesignForm.tsx  TestDesignResult.tsx
frontend/src/lib/: api.ts  date.ts
infra/: .gitignore  cdk.json  package.json  pnpm-lock.yaml
infra/lambda/generate-test-design/: handler.py
infra/lib/: backend-api-stack.ts  frontend-hosting-stack.ts
