[project]
name = "ai-test-design-support-backend"
version = "0.1.0"
description = "Backend API for AI test design support tool"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "openai",
    "uvicorn[standard]",
    "sqlalchemy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
cache_dir = ".pytest_cache_local"
addopts = ["--basetemp=.pytest_tmp"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
